@@ -20,25 +20,27 @@
 
 package com.apple.foundationdb.record.lucene;
 
-import com.apple.foundationdb.record.IndexScanType;
 import com.apple.foundationdb.record.RecordCursor;
 import com.apple.foundationdb.record.RecordMetaData;
 import com.apple.foundationdb.record.RecordMetaDataBuilder;
 import com.apple.foundationdb.record.TestRecordsTextProto;
+import com.apple.foundationdb.record.lucene.ngram.NgramAnalyzer;
+import com.apple.foundationdb.record.lucene.synonym.EnglishSynonymMapConfig;
+import com.apple.foundationdb.record.lucene.synonym.SynonymAnalyzer;
 import com.apple.foundationdb.record.metadata.Index;
 import com.apple.foundationdb.record.metadata.IndexOptions;
 import com.apple.foundationdb.record.metadata.IndexTypes;
-import com.apple.foundationdb.record.metadata.Key;
 import com.apple.foundationdb.record.metadata.expressions.GroupingKeyExpression;
 import com.apple.foundationdb.record.metadata.expressions.KeyExpression;
 import com.apple.foundationdb.record.provider.common.text.AllSuffixesTextTokenizer;
 import com.apple.foundationdb.record.provider.common.text.TextSamples;
 import com.apple.foundationdb.record.provider.foundationdb.FDBQueriedRecord;
 import com.apple.foundationdb.record.provider.foundationdb.FDBRecordContext;
+import com.apple.foundationdb.record.provider.foundationdb.FDBRecordContextConfig;
 import com.apple.foundationdb.record.provider.foundationdb.indexes.TextIndexTestUtils;
+import com.apple.foundationdb.record.provider.foundationdb.properties.RecordLayerPropertyStorage;
 import com.apple.foundationdb.record.provider.foundationdb.query.FDBRecordStoreQueryTestBase;
 import com.apple.foundationdb.record.query.RecordQuery;
-import com.apple.foundationdb.record.query.expressions.LuceneQueryComponent;
 import com.apple.foundationdb.record.query.expressions.Query;
 import com.apple.foundationdb.record.query.expressions.QueryComponent;
 import com.apple.foundationdb.record.query.plan.PlannableIndexTypes;
@@ -48,24 +50,38 @@ import com.apple.foundationdb.tuple.Tuple;
 import com.apple.test.BooleanSource;
 import com.apple.test.Tags;
 import com.google.common.collect.ImmutableMap;
-import com.google.common.collect.ImmutableSet;
 import com.google.common.collect.Lists;
 import com.google.common.collect.Sets;
 import com.google.protobuf.Message;
 import org.hamcrest.Matcher;
 import org.junit.jupiter.api.Tag;
+import org.junit.jupiter.api.Test;
 import org.junit.jupiter.params.ParameterizedTest;
 
+import javax.annotation.Nonnull;
 import javax.annotation.Nullable;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
+import java.util.Map;
+import java.util.Set;
+import java.util.concurrent.ConcurrentHashMap;
+import java.util.concurrent.ExecutorService;
+import java.util.concurrent.Executors;
+import java.util.concurrent.ThreadFactory;
+import java.util.function.Supplier;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 import static com.apple.foundationdb.record.TestHelpers.assertLoadRecord;
+import static com.apple.foundationdb.record.lucene.LuceneIndexTest.generateRandomWords;
+import static com.apple.foundationdb.record.lucene.LucenePlanMatchers.group;
+import static com.apple.foundationdb.record.lucene.LucenePlanMatchers.query;
+import static com.apple.foundationdb.record.lucene.LucenePlanMatchers.scanParams;
+import static com.apple.foundationdb.record.metadata.Key.Expressions.concat;
 import static com.apple.foundationdb.record.metadata.Key.Expressions.concatenateFields;
 import static com.apple.foundationdb.record.metadata.Key.Expressions.field;
+import static com.apple.foundationdb.record.metadata.Key.Expressions.function;
 import static com.apple.foundationdb.record.query.plan.match.PlanMatchers.bounds;
 import static com.apple.foundationdb.record.query.plan.match.PlanMatchers.coveringIndexScan;
 import static com.apple.foundationdb.record.query.plan.match.PlanMatchers.fetch;
@@ -77,11 +93,13 @@ import static com.apple.foundationdb.record.query.plan.match.PlanMatchers.indexS
 import static com.apple.foundationdb.record.query.plan.match.PlanMatchers.primaryKeyDistinct;
 import static com.apple.foundationdb.record.query.plan.match.PlanMatchers.scan;
 import static com.apple.foundationdb.record.query.plan.match.PlanMatchers.typeFilter;
-import static com.apple.foundationdb.record.query.plan.match.PlanMatchers.union;
 import static com.apple.foundationdb.record.query.plan.match.PlanMatchers.unorderedUnion;
 import static org.hamcrest.MatcherAssert.assertThat;
+import static org.hamcrest.Matchers.aMapWithSize;
 import static org.hamcrest.Matchers.allOf;
 import static org.hamcrest.Matchers.equalTo;
+import static org.hamcrest.Matchers.greaterThan;
+import static org.hamcrest.Matchers.hasToString;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
 /**
@@ -89,6 +107,7 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
  */
 @Tag(Tags.RequiresFDB)
 public class FDBLuceneQueryTest extends FDBRecordStoreQueryTestBase {
+
     private static final List<TestRecordsTextProto.SimpleDocument> DOCUMENTS = TextIndexTestUtils.toSimpleDocuments(Arrays.asList(
             TextSamples.ANGSTROM,
             TextSamples.AETHELRED,
@@ -130,21 +149,15 @@ public class FDBLuceneQueryTest extends FDBRecordStoreQueryTestBase {
 
     private static final String MAP_DOC = "MapDocument";
 
-    private static final Index SIMPLE_TEXT_SUFFIXES = new Index("Complex$text_index", new LuceneFieldKeyExpression("text", LuceneKeyExpression.FieldType.STRING, false, false), IndexTypes.LUCENE,
+    private static final Index SIMPLE_TEXT_SUFFIXES = new Index("Complex$text_index", function(LuceneFunctionNames.LUCENE_TEXT, field("text")), LuceneIndexTypes.LUCENE,
             ImmutableMap.of(IndexOptions.TEXT_TOKENIZER_NAME_OPTION, AllSuffixesTextTokenizer.NAME));
-    private static final List<KeyExpression> keys = Lists.newArrayList(
-            new LuceneFieldKeyExpression("key", KeyExpression.FanType.FanOut, Key.Evaluated.NullStandin.NULL,
-                    LuceneKeyExpression.FieldType.STRING_KEY_MAP, false, false),
-            new LuceneFieldKeyExpression("value", LuceneKeyExpression.FieldType.STRING, false, false));
+    private static final List<KeyExpression> keys = List.of(field("key"), function(LuceneFunctionNames.LUCENE_TEXT, field("value")));
+    private static final KeyExpression mainExpression = field("entry", KeyExpression.FanType.FanOut).nest(concat(keys));
 
-    private static final LuceneThenKeyExpression mainExpression = new LuceneThenKeyExpression((LuceneFieldKeyExpression) keys.get(0), keys);
+    private static final Index MAP_AND_FIELD_ON_LUCENE_INDEX = new Index("MapField$values", concat(mainExpression, field("doc_id")), LuceneIndexTypes.LUCENE);
+    private static final Index MAP_ON_LUCENE_INDEX = new Index("Map$entry-value", new GroupingKeyExpression(mainExpression, 1), LuceneIndexTypes.LUCENE);
 
-    private static final Index MAP_AND_FIELD_ON_LUCENE_INDEX = new Index("MapField$values", new LuceneThenKeyExpression( null, Lists.newArrayList(new GroupingKeyExpression(field("entry", KeyExpression.FanType.FanOut).nest(mainExpression), 1),
-            new LuceneFieldKeyExpression("doc_id",KeyExpression.FanType.None, Key.Evaluated.NullStandin.NULL,
-                                                             LuceneKeyExpression.FieldType.LONG, false, false))), IndexTypes.LUCENE);
-
-    private static final Index MAP_ON_LUCENE_INDEX = new Index("Map$entry-value", new GroupingKeyExpression(field("entry", KeyExpression.FanType.FanOut).nest(
-            mainExpression), 1), IndexTypes.LUCENE);
+    private ExecutorService executorService = null;
 
     @Override
     public void setupPlanner(@Nullable PlannableIndexTypes indexTypes) {
@@ -156,22 +169,44 @@ public class FDBLuceneQueryTest extends FDBRecordStoreQueryTestBase {
                         Sets.newHashSet(IndexTypes.VALUE, IndexTypes.VERSION),
                         Sets.newHashSet(IndexTypes.RANK, IndexTypes.TIME_WINDOW_LEADERBOARD),
                         Sets.newHashSet(IndexTypes.TEXT),
-                        Sets.newHashSet(IndexTypes.LUCENE)
+                        Sets.newHashSet(LuceneIndexTypes.LUCENE)
                 );
             }
             planner = new LucenePlanner(recordStore.getRecordMetaData(), recordStore.getRecordStoreState(), indexTypes, recordStore.getTimer());
         }
     }
 
-    protected void openRecordStore(FDBRecordContext context) {
-        openRecordStore(context, store -> { });
+    @Override
+    protected FDBRecordContextConfig.Builder contextConfig(@Nonnull final RecordLayerPropertyStorage.Builder propsBuilder) {
+        return super.contextConfig(propsBuilder.addProp(LuceneRecordContextProperties.LUCENE_EXECUTOR_SERVICE, (Supplier<ExecutorService>)() -> executorService));
     }
 
-    protected void openRecordStore(FDBRecordContext context, RecordMetaDataHook hook) {
+    protected void openRecordStoreWithNgramIndex(FDBRecordContext context, boolean edgesOnly, int minSize, int maxSize) {
+        final Index ngramIndex = new Index("Complex$text_index", function(LuceneFunctionNames.LUCENE_TEXT, field("text")), LuceneIndexTypes.LUCENE,
+                ImmutableMap.of(LuceneIndexOptions.TEXT_ANALYZER_NAME_OPTION, NgramAnalyzer.NgramAnalyzerFactory.ANALYZER_NAME,
+                        IndexOptions.TEXT_TOKEN_MIN_SIZE, String.valueOf(minSize),
+                        IndexOptions.TEXT_TOKEN_MAX_SIZE, String.valueOf(maxSize),
+                        LuceneIndexOptions.NGRAM_TOKEN_EDGES_ONLY, String.valueOf(edgesOnly)));
+        openRecordStore(context, store -> { }, ngramIndex);
+    }
+
+    protected void openRecordStoreWithSynonymIndex(FDBRecordContext context) {
+        final Index ngramIndex = new Index("Complex$text_index", function(LuceneFunctionNames.LUCENE_TEXT, field("text")), LuceneIndexTypes.LUCENE,
+                ImmutableMap.of(
+                        LuceneIndexOptions.TEXT_ANALYZER_NAME_OPTION, SynonymAnalyzer.SynonymAnalyzerFactory.ANALYZER_NAME,
+                        LuceneIndexOptions.TEXT_SYNONYM_SET_NAME_OPTION, EnglishSynonymMapConfig.CONFIG_NAME));
+        openRecordStore(context, store -> { }, ngramIndex);
+    }
+
+    protected void openRecordStore(FDBRecordContext context) {
+        openRecordStore(context, store -> { }, SIMPLE_TEXT_SUFFIXES);
+    }
+
+    protected void openRecordStore(FDBRecordContext context, RecordMetaDataHook hook, Index simpleDocIndex) {
         RecordMetaDataBuilder metaDataBuilder = RecordMetaData.newBuilder().setRecords(TestRecordsTextProto.getDescriptor());
         metaDataBuilder.getRecordType(TextIndexTestUtils.COMPLEX_DOC).setPrimaryKey(concatenateFields("group", "doc_id"));
         metaDataBuilder.removeIndex("SimpleDocument$text");
-        metaDataBuilder.addIndex(TextIndexTestUtils.SIMPLE_DOC, SIMPLE_TEXT_SUFFIXES);
+        metaDataBuilder.addIndex(TextIndexTestUtils.SIMPLE_DOC, simpleDocIndex);
         metaDataBuilder.addIndex(MAP_DOC, MAP_ON_LUCENE_INDEX);
         metaDataBuilder.addIndex(MAP_DOC, MAP_AND_FIELD_ON_LUCENE_INDEX);
         hook.apply(metaDataBuilder);
@@ -188,7 +223,7 @@ public class FDBLuceneQueryTest extends FDBRecordStoreQueryTestBase {
             commit(context);
         }
     }
-    
+
     private void initializeNested() {
         try (FDBRecordContext context = openContext()) {
             openRecordStore(context);
@@ -205,9 +240,114 @@ public class FDBLuceneQueryTest extends FDBRecordStoreQueryTestBase {
         }
     }
 
+    private void initializeWithNgramIndex(String text, boolean edgesOnly, int minSize, int maxSize) {
+        try (FDBRecordContext context = openContext()) {
+            openRecordStoreWithNgramIndex(context, edgesOnly, minSize, maxSize);
+            TestRecordsTextProto.SimpleDocument document = TestRecordsTextProto.SimpleDocument.newBuilder()
+                    .setDocId(1L)
+                    .setGroup(1)
+                    .setText(text)
+                    .build();
+            recordStore.saveRecord(document);
+            commit(context);
+        }
+    }
+
+    private void initializedWithSynonymIndex(String text) {
+        try (FDBRecordContext context = openContext()) {
+            openRecordStoreWithSynonymIndex(context);
+            TestRecordsTextProto.SimpleDocument document = TestRecordsTextProto.SimpleDocument.newBuilder()
+                    .setDocId(1L)
+                    .setGroup(1)
+                    .setText(text)
+                    .build();
+            recordStore.saveRecord(document);
+            commit(context);
+        }
+    }
+
+    private void assertTermIndexedOrNot(String term, boolean indexedExpected, boolean shouldDeferFetch) throws Exception {
+        try (FDBRecordContext context = openContext()) {
+            openRecordStore(context);
+            final QueryComponent filter = new LuceneQueryComponent(term, Lists.newArrayList());
+            // Query for full records
+            RecordQuery query = RecordQuery.newBuilder()
+                    .setRecordType(TextIndexTestUtils.SIMPLE_DOC)
+                    .setFilter(filter)
+                    .build();
+            setDeferFetchAfterUnionAndIntersection(shouldDeferFetch);
+            RecordQueryPlan plan = planner.plan(query);
+            RecordCursor<FDBQueriedRecord<Message>> fdbQueriedRecordRecordCursor = recordStore.executeQuery(plan);
+            RecordCursor<Tuple> map = fdbQueriedRecordRecordCursor.map(FDBQueriedRecord::getPrimaryKey);
+            List<Long> primaryKeys = map.map(t -> t.getLong(0)).asList().get();
+            if (indexedExpected) {
+                assertEquals(Set.of(1L), Set.copyOf(primaryKeys), "Expected term not indexed");
+            } else {
+                assertThat("Unexpected term indexed", primaryKeys.isEmpty());
+            }
+        }
+    }
+
     @ParameterizedTest
     @BooleanSource
-    public void simpleLuceneScans(boolean shouldDeferFetch) throws Exception {
+    void testSynonym(boolean shouldDeferFetch) throws Exception {
+        initializedWithSynonymIndex("Good morning Mr Tian");
+        assertTermIndexedOrNot("good", true, shouldDeferFetch);
+        assertTermIndexedOrNot("morning", true, shouldDeferFetch);
+        // The synonym is not indexed into FDB, it is only used for in fly analysis during query time
+        assertTermIndexedOrNot("full", false, shouldDeferFetch);
+    }
+
+    @ParameterizedTest
+    @BooleanSource
+    void testNgram(boolean shouldDeferFetch) throws Exception {
+        initializeWithNgramIndex("Good morning Mr Tian", false, 3, 5);
+        // Token with length == 2, not indexed
+        assertTermIndexedOrNot("mo", false, shouldDeferFetch);
+        // Token with length == 3, indexed
+        assertTermIndexedOrNot("mor", true, shouldDeferFetch);
+        // Token with length == 4, indexed
+        assertTermIndexedOrNot("morn", true, shouldDeferFetch);
+        // Token with length == 5, indexed
+        assertTermIndexedOrNot("morni", true, shouldDeferFetch);
+        // Token not on front edge, also indexed, because not edgesOnly
+        assertTermIndexedOrNot("ornin", true, shouldDeferFetch);
+        // Token not on front edge, also indexed, because not edgesOnly
+        assertTermIndexedOrNot("rning", true, shouldDeferFetch);
+        // Token with length == 6, not indexed
+        assertTermIndexedOrNot("mornin", false, shouldDeferFetch);
+        // Token indexed with higher/lower case ignored
+        assertTermIndexedOrNot("Good", true, shouldDeferFetch);
+        assertTermIndexedOrNot("good", true, shouldDeferFetch);
+        // Token with length == 2, but also indexed, because it is a separate word
+        assertTermIndexedOrNot("Mr", true, shouldDeferFetch);
+        // Token with length == 7, but also indexed, because it is a separate word
+        assertTermIndexedOrNot("morning", true, shouldDeferFetch);
+        // Query parser parses it as "Mr" and "T" with OR operator, and "Mr" is indexed
+        assertTermIndexedOrNot("Mr T", true, shouldDeferFetch);
+    }
+
+    @ParameterizedTest
+    @BooleanSource
+    void testNgramEdgesOnly(boolean shouldDeferFetch) throws Exception {
+        initializeWithNgramIndex("Good morning Mr Tian", true, 3, 5);
+        // Token with length == 2, not indexed
+        assertTermIndexedOrNot("mo", false, shouldDeferFetch);
+        // Token with length == 3, indexed
+        assertTermIndexedOrNot("mor", true, shouldDeferFetch);
+        // Token with length == 4, indexed
+        assertTermIndexedOrNot("morn", true, shouldDeferFetch);
+        // Token with length == 5, indexed
+        assertTermIndexedOrNot("morni", true, shouldDeferFetch);
+        // Not indexed, because edgesOnly
+        assertTermIndexedOrNot("ornin", false, shouldDeferFetch);
+        // Not indexed, because edgesOnly
+        assertTermIndexedOrNot("rning", false, shouldDeferFetch);
+    }
+
+    @ParameterizedTest
+    @BooleanSource
+    void simpleLuceneScans(boolean shouldDeferFetch) throws Exception {
         initializeFlat();
         try (FDBRecordContext context = openContext()) {
             openRecordStore(context);
@@ -219,20 +359,20 @@ public class FDBLuceneQueryTest extends FDBRecordStoreQueryTestBase {
                     .build();
             setDeferFetchAfterUnionAndIntersection(shouldDeferFetch);
             Matcher<RecordQueryPlan> matcher = indexScan(allOf(indexScan("Complex$text_index"),
-                    indexScanType(IndexScanType.BY_LUCENE),
-                    bounds(hasTupleString("[[civil blood makes civil hands unclean],[civil blood makes civil hands unclean]]"))));
+                    indexScanType(LuceneScanTypes.BY_LUCENE),
+                    scanParams(query(hasToString("MULTI civil blood makes civil hands unclean")))));
             RecordQueryPlan plan = planner.plan(query);
-            //assertThat(plan, matcher);
+            assertThat(plan, matcher);
             RecordCursor<FDBQueriedRecord<Message>> fdbQueriedRecordRecordCursor = recordStore.executeQuery(plan);
             RecordCursor<Tuple> map = fdbQueriedRecordRecordCursor.map(FDBQueriedRecord::getPrimaryKey);
             List<Long> primaryKeys = map.map(t -> t.getLong(0)).asList().get();
-            assertEquals(ImmutableSet.of(2L, 4L), ImmutableSet.copyOf(primaryKeys));
+            assertEquals(Set.of(2L, 4L), Set.copyOf(primaryKeys));
         }
     }
 
     @ParameterizedTest
     @BooleanSource
-    public void testThenExpressionBeforeFieldExpression(boolean shouldDeferFetch) throws Exception {
+    void testThenExpressionBeforeFieldExpression(boolean shouldDeferFetch) throws Exception {
         initializeNestedWithField();
         try (FDBRecordContext context = openContext()) {
             openRecordStore(context);
@@ -246,14 +386,14 @@ public class FDBLuceneQueryTest extends FDBRecordStoreQueryTestBase {
             RecordCursor<FDBQueriedRecord<Message>> fdbQueriedRecordRecordCursor = recordStore.executeQuery(plan);
             RecordCursor<Tuple> map = fdbQueriedRecordRecordCursor.map(FDBQueriedRecord::getPrimaryKey);
             List<Long> primaryKeys = map.map(t -> t.getLong(0)).asList().get();
-            assertEquals(ImmutableSet.of(0L, 1L, 2L), ImmutableSet.copyOf(primaryKeys));
+            assertEquals(Set.of(0L, 1L, 2L), Set.copyOf(primaryKeys));
         }
 
     }
 
     @ParameterizedTest
     @BooleanSource
-    public void simpleLuceneScansDocId(boolean shouldDeferFetch) throws Exception {
+    void simpleLuceneScansDocId(boolean shouldDeferFetch) throws Exception {
         initializeFlat();
         try (FDBRecordContext context = openContext()) {
             openRecordStore(context);
@@ -267,13 +407,13 @@ public class FDBLuceneQueryTest extends FDBRecordStoreQueryTestBase {
             RecordQueryPlan plan = planner.plan(query);
             assertThat(plan, matcher);
             List<Long> primaryKeys = recordStore.executeQuery(plan).map(FDBQueriedRecord::getPrimaryKey).map(t -> t.getLong(0)).asList().get();
-            assertEquals(ImmutableSet.of(1L), ImmutableSet.copyOf(primaryKeys));
+            assertEquals(Set.of(1L), Set.copyOf(primaryKeys));
         }
     }
 
     @ParameterizedTest
     @BooleanSource
-    public void delayFetchOnOrOfLuceneScanWithFieldFilter(boolean shouldDeferFetch) throws Exception {
+    void delayFetchOnOrOfLuceneScanWithFieldFilter(boolean shouldDeferFetch) throws Exception {
         initializeFlat();
         try (FDBRecordContext context = openContext()) {
             openRecordStore(context);
@@ -288,14 +428,14 @@ public class FDBLuceneQueryTest extends FDBRecordStoreQueryTestBase {
             Matcher<RecordQueryPlan> matcher = primaryKeyDistinct(
                     unorderedUnion(
                             indexScan(allOf(indexScan("Complex$text_index"),
-                                    indexScanType(IndexScanType.BY_LUCENE),
-                                    bounds(hasTupleString("[[civil blood makes civil hands unclean],[civil blood makes civil hands unclean]]")))),
+                                    indexScanType(LuceneScanTypes.BY_LUCENE),
+                                    scanParams(query(hasToString("civil blood makes civil hands unclean"))))),
                             typeFilter(equalTo(Collections.singleton(TextIndexTestUtils.SIMPLE_DOC)),
                                     scan(bounds(hasTupleString("([null],[10000])"))))
                     ));
             assertThat(plan, matcher);
             List<Long> primaryKeys = recordStore.executeQuery(plan).map(FDBQueriedRecord::getPrimaryKey).map(t -> t.getLong(0)).asList().get();
-            assertEquals(ImmutableSet.of(2L, 4L, 0L, 1L, 3L, 5L), ImmutableSet.copyOf(primaryKeys));
+            assertEquals(Set.of(2L, 4L, 0L, 1L, 3L, 5L), Set.copyOf(primaryKeys));
             if (shouldDeferFetch) {
                 assertLoadRecord(5, context);
             } else {
@@ -306,7 +446,7 @@ public class FDBLuceneQueryTest extends FDBRecordStoreQueryTestBase {
 
     @ParameterizedTest
     @BooleanSource
-    public void delayFetchOnLuceneFilterWithSort(boolean shouldDeferFetch) throws Exception {
+    void delayFetchOnLuceneFilterWithSort(boolean shouldDeferFetch) throws Exception {
         initializeFlat();
         try (FDBRecordContext context = openContext()) {
             openRecordStore(context);
@@ -320,7 +460,7 @@ public class FDBLuceneQueryTest extends FDBRecordStoreQueryTestBase {
             setDeferFetchAfterUnionAndIntersection(shouldDeferFetch);
             RecordQueryPlan plan = planner.plan(query);
             List<Long> primaryKeys = recordStore.executeQuery(plan).map(FDBQueriedRecord::getPrimaryKey).map(t -> t.getLong(0)).asList().get();
-            assertEquals(ImmutableSet.of(2L, 4L), ImmutableSet.copyOf(primaryKeys));
+            assertEquals(Set.of(2L, 4L), Set.copyOf(primaryKeys));
             if (shouldDeferFetch) {
                 assertLoadRecord(5, context);
             } else {
@@ -331,7 +471,7 @@ public class FDBLuceneQueryTest extends FDBRecordStoreQueryTestBase {
 
     @ParameterizedTest
     @BooleanSource
-    public void delayFetchOnAndOfLuceneAndFieldFilter(boolean shouldDeferFetch) throws Exception {
+    void delayFetchOnAndOfLuceneAndFieldFilter(boolean shouldDeferFetch) throws Exception {
         initializeFlat();
         try (FDBRecordContext context = openContext()) {
             openRecordStore(context);
@@ -344,13 +484,13 @@ public class FDBLuceneQueryTest extends FDBRecordStoreQueryTestBase {
                     .build();
             setDeferFetchAfterUnionAndIntersection(shouldDeferFetch);
             RecordQueryPlan plan = planner.plan(query);
-            Matcher<RecordQueryPlan> scanMatcher = fetch(filter(filter2, coveringIndexScan(indexScan(allOf(indexScanType(IndexScanType.BY_LUCENE_FULL_TEXT), indexScan("Complex$text_index"),
-                    bounds(hasTupleString("[[civil blood makes civil hands unclean],[civil blood makes civil hands unclean]]")))))));
+            Matcher<RecordQueryPlan> scanMatcher = fetch(filter(filter2, coveringIndexScan(indexScan(allOf(indexScanType(LuceneScanTypes.BY_LUCENE), indexScan("Complex$text_index"),
+                    scanParams(query(hasToString("MULTI civil blood makes civil hands unclean"))))))));
             assertThat(plan, scanMatcher);
             RecordCursor<FDBQueriedRecord<Message>> primaryKeys;
             primaryKeys = recordStore.executeQuery(plan);
             final List<Long> keys = primaryKeys.map(FDBQueriedRecord::getPrimaryKey).map(t -> t.getLong(0)).asList().get();
-            assertEquals(ImmutableSet.of(2L), ImmutableSet.copyOf(keys));
+            assertEquals(Set.of(2L), Set.copyOf(keys));
             if (shouldDeferFetch) {
                 assertLoadRecord(3, context);
             } else {
@@ -361,12 +501,12 @@ public class FDBLuceneQueryTest extends FDBRecordStoreQueryTestBase {
 
     @ParameterizedTest
     @BooleanSource
-    public void delayFetchOnOrOfLuceneFiltersGivesUnion(boolean shouldDeferFetch) throws Exception {
+    void delayFetchOnOrOfLuceneFiltersGivesUnion(boolean shouldDeferFetch) throws Exception {
         initializeFlat();
         try (FDBRecordContext context = openContext()) {
             openRecordStore(context);
-            final QueryComponent filter1 = new LuceneQueryComponent("(civil blood makes civil hands unclean)", Lists.newArrayList("text"), true);
-            final QueryComponent filter2 = new LuceneQueryComponent("(was king from 966 to 1016)", Lists.newArrayList());
+            final QueryComponent filter1 = new LuceneQueryComponent("(\"civil blood makes civil hands unclean\")", Lists.newArrayList("text"), true);
+            final QueryComponent filter2 = new LuceneQueryComponent("(\"was king from 966 to 1016\")", Lists.newArrayList());
             // Query for full records
             RecordQuery query = RecordQuery.newBuilder()
                     .setRecordType(TextIndexTestUtils.SIMPLE_DOC)
@@ -374,27 +514,25 @@ public class FDBLuceneQueryTest extends FDBRecordStoreQueryTestBase {
                     .build();
             setDeferFetchAfterUnionAndIntersection(shouldDeferFetch);
             RecordQueryPlan plan = planner.plan(query);
-            Matcher<RecordQueryPlan> matcher = union(
+            Matcher<RecordQueryPlan> matcher = primaryKeyDistinct(unorderedUnion(
                     indexScan(allOf(indexScan("Complex$text_index"),
-                            indexScanType(IndexScanType.BY_LUCENE_FULL_TEXT),
-                            bounds(hasTupleString("[[(civil blood makes civil hands unclean)],[(civil blood makes civil hands unclean)]]")))),
+                            indexScanType(LuceneScanTypes.BY_LUCENE),
+                            scanParams(query(hasToString("MULTI (\"civil blood makes civil hands unclean\")"))))),
                     indexScan(allOf(indexScan("Complex$text_index"),
-                            indexScanType(IndexScanType.BY_LUCENE_FULL_TEXT),
-                            bounds(hasTupleString("[[(was king from 966 to 1016)],[(was king from 966 to 1016)]]")))),
-                    equalTo(field("doc_id")));
+                            indexScanType(LuceneScanTypes.BY_LUCENE),
+                            scanParams(query(hasToString("MULTI (\"was king from 966 to 1016\")")))))));
             if (shouldDeferFetch) {
-                matcher = fetch(union(
+                matcher = fetch(primaryKeyDistinct(unorderedUnion(
                         coveringIndexScan(indexScan(allOf(indexScan("Complex$text_index"),
-                                indexScanType(IndexScanType.BY_LUCENE_FULL_TEXT),
-                                bounds(hasTupleString("[[(civil blood makes civil hands unclean)],[(civil blood makes civil hands unclean)]]"))))),
+                                indexScanType(LuceneScanTypes.BY_LUCENE),
+                                scanParams(query(hasToString("MULTI (\"civil blood makes civil hands unclean\")")))))),
                         coveringIndexScan(indexScan(allOf(indexScan("Complex$text_index"),
-                                indexScanType(IndexScanType.BY_LUCENE_FULL_TEXT),
-                                bounds(hasTupleString("[[(was king from 966 to 1016)],[(was king from 966 to 1016)]]"))))),
-                        equalTo(field("doc_id"))));
+                                indexScanType(LuceneScanTypes.BY_LUCENE),
+                                scanParams(query(hasToString("MULTI (\"was king from 966 to 1016\")")))))))));
             }
             assertThat(plan, matcher);
             List<Long> primaryKeys = recordStore.executeQuery(plan).map(FDBQueriedRecord::getPrimaryKey).map(t -> t.getLong(0)).asList().get();
-            assertEquals(ImmutableSet.of(1L, 2L, 4L), ImmutableSet.copyOf(primaryKeys));
+            assertEquals(Set.of(1L, 2L, 4L), Set.copyOf(primaryKeys));
             if (shouldDeferFetch) {
                 assertLoadRecord(5, context);
             } else {
@@ -405,11 +543,11 @@ public class FDBLuceneQueryTest extends FDBRecordStoreQueryTestBase {
 
     @ParameterizedTest
     @BooleanSource
-    public void delayFetchOnAndOfLuceneFilters(boolean shouldDeferFetch) throws Exception {
+    void delayFetchOnAndOfLuceneFilters(boolean shouldDeferFetch) throws Exception {
         initializeFlat();
         try (FDBRecordContext context = openContext()) {
             openRecordStore(context);
-            final QueryComponent filter1 = new LuceneQueryComponent("the continuance", Lists.newArrayList());
+            final QueryComponent filter1 = new LuceneQueryComponent("\"the continuance\"", Lists.newArrayList());
             final QueryComponent filter2 = new LuceneQueryComponent("grudge", Lists.newArrayList());
             // Query for full records
             RecordQuery query = RecordQuery.newBuilder()
@@ -418,12 +556,12 @@ public class FDBLuceneQueryTest extends FDBRecordStoreQueryTestBase {
                     .build();
             setDeferFetchAfterUnionAndIntersection(shouldDeferFetch);
             RecordQueryPlan plan = planner.plan(query);
-            Matcher<RecordQueryPlan> matcher = indexScan(allOf(indexScanType(IndexScanType.BY_LUCENE_FULL_TEXT),
-                    indexName("Complex$text_index"),
-                    bounds(hasTupleString("[[(the continuance) AND (grudge)],[(the continuance) AND (grudge)]]"))));
+            Matcher<RecordQueryPlan> matcher = indexScan(allOf(indexScanType(LuceneScanTypes.BY_LUCENE),
+                    indexName(SIMPLE_TEXT_SUFFIXES.getName()),
+                    scanParams(query(hasToString("MULTI \"the continuance\" AND MULTI grudge")))));
             assertThat(plan, matcher);
             List<Long> primaryKeys = recordStore.executeQuery(plan).map(FDBQueriedRecord::getPrimaryKey).map(t -> t.getLong(0)).asList().get();
-            assertEquals(ImmutableSet.of(4L), ImmutableSet.copyOf(primaryKeys));
+            assertEquals(Set.of(4L), Set.copyOf(primaryKeys));
             if (shouldDeferFetch) {
                 assertLoadRecord(3, context);
             } else {
@@ -434,7 +572,7 @@ public class FDBLuceneQueryTest extends FDBRecordStoreQueryTestBase {
 
     @ParameterizedTest
     @BooleanSource
-    public void delayFetchOnLuceneComplexStringAnd(boolean shouldDeferFetch) throws Exception {
+    void delayFetchOnLuceneComplexStringAnd(boolean shouldDeferFetch) throws Exception {
         initializeFlat();
         try (FDBRecordContext context = openContext()) {
             openRecordStore(context);
@@ -446,12 +584,12 @@ public class FDBLuceneQueryTest extends FDBRecordStoreQueryTestBase {
                     .build();
             setDeferFetchAfterUnionAndIntersection(shouldDeferFetch);
             RecordQueryPlan plan = planner.plan(query);
-            Matcher<RecordQueryPlan> matcher = indexScan(allOf(indexScanType(IndexScanType.BY_LUCENE_FULL_TEXT),
-                    indexName("Complex$text_index"),
-                    bounds(hasTupleString("[[(the continuance AND grudge)],[(the continuance AND grudge)]]"))));
+            Matcher<RecordQueryPlan> matcher = indexScan(allOf(indexScanType(LuceneScanTypes.BY_LUCENE),
+                    indexName(SIMPLE_TEXT_SUFFIXES.getName()),
+                    scanParams(query(hasToString("MULTI (the continuance AND grudge)")))));
             assertThat(plan, matcher);
             List<Long> primaryKeys = recordStore.executeQuery(plan).map(FDBQueriedRecord::getPrimaryKey).map(t -> t.getLong(0)).asList().get();
-            assertEquals(ImmutableSet.of(4L), ImmutableSet.copyOf(primaryKeys));
+            assertEquals(Set.of(4L), Set.copyOf(primaryKeys));
             if (shouldDeferFetch) {
                 assertLoadRecord(3, context);
             } else {
@@ -462,11 +600,11 @@ public class FDBLuceneQueryTest extends FDBRecordStoreQueryTestBase {
 
     @ParameterizedTest
     @BooleanSource
-    public void delayFetchOnLuceneComplexStringOr(boolean shouldDeferFetch) throws Exception {
+    void delayFetchOnLuceneComplexStringOr(boolean shouldDeferFetch) throws Exception {
         initializeFlat();
         try (FDBRecordContext context = openContext()) {
             openRecordStore(context);
-            final QueryComponent filter1 = new LuceneQueryComponent("the continuance OR grudge", Lists.newArrayList());
+            final QueryComponent filter1 = new LuceneQueryComponent("\"the continuance\" OR grudge", Lists.newArrayList());
             // Query for full records
             RecordQuery query = RecordQuery.newBuilder()
                     .setRecordType(TextIndexTestUtils.SIMPLE_DOC)
@@ -474,12 +612,12 @@ public class FDBLuceneQueryTest extends FDBRecordStoreQueryTestBase {
                     .build();
             setDeferFetchAfterUnionAndIntersection(shouldDeferFetch);
             RecordQueryPlan plan = planner.plan(query);
-            Matcher<RecordQueryPlan> matcher = indexScan(allOf(indexScanType(IndexScanType.BY_LUCENE_FULL_TEXT),
-                    indexName("Complex$text_index"),
-                    bounds(hasTupleString("[[the continuance OR grudge],[the continuance OR grudge]]"))));
+            Matcher<RecordQueryPlan> matcher = indexScan(allOf(indexScanType(LuceneScanTypes.BY_LUCENE),
+                    indexName(SIMPLE_TEXT_SUFFIXES.getName()),
+                    scanParams(query(hasToString("MULTI \"the continuance\" OR grudge")))));
             assertThat(plan, matcher);
             List<Long> primaryKeys = recordStore.executeQuery(plan).map(FDBQueriedRecord::getPrimaryKey).map(t -> t.getLong(0)).asList().get();
-            assertEquals(ImmutableSet.of(4L, 5L, 2L), ImmutableSet.copyOf(primaryKeys));
+            assertEquals(Set.of(4L, 5L, 2L), Set.copyOf(primaryKeys));
             if (shouldDeferFetch) {
                 assertLoadRecord(3, context);
             } else {
@@ -490,7 +628,7 @@ public class FDBLuceneQueryTest extends FDBRecordStoreQueryTestBase {
 
     @ParameterizedTest
     @BooleanSource
-    public void misMatchQueryShouldReturnNoResult(boolean shouldDeferFetch) throws Exception {
+    void misMatchQueryShouldReturnNoResult(boolean shouldDeferFetch) throws Exception {
         initializeFlat();
         try (FDBRecordContext context = openContext()) {
             openRecordStore(context);
@@ -502,10 +640,10 @@ public class FDBLuceneQueryTest extends FDBRecordStoreQueryTestBase {
                     .build();
             setDeferFetchAfterUnionAndIntersection(shouldDeferFetch);
             RecordQueryPlan plan = planner.plan(query);
-            Matcher<RecordQueryPlan> matcher = indexScan(allOf(indexScan("Complex$text_index"), indexScanType(IndexScanType.BY_LUCENE_FULL_TEXT), bounds(hasTupleString("[[doesNotExist],[doesNotExist]]"))));
+            Matcher<RecordQueryPlan> matcher = indexScan(allOf(indexScan("Complex$text_index"), indexScanType(LuceneScanTypes.BY_LUCENE), scanParams(query(hasToString("MULTI doesNotExist")))));
             assertThat(plan, matcher);
             List<Long> primaryKeys = recordStore.executeQuery(plan).map(FDBQueriedRecord::getPrimaryKey).map(t -> t.getLong(0)).asList().get();
-            assertEquals(ImmutableSet.of(), ImmutableSet.copyOf(primaryKeys));
+            assertEquals(Set.of(), Set.copyOf(primaryKeys));
             if (shouldDeferFetch) {
                 assertLoadRecord(3, context);
             } else {
@@ -514,72 +652,119 @@ public class FDBLuceneQueryTest extends FDBRecordStoreQueryTestBase {
         }
     }
 
+    @Test
+    void threadedLuceneScanDoesntBreakPlannerAndSearch() throws Exception {
+        CountingThreadFactory threadFactory = new CountingThreadFactory();
+        executorService = Executors.newFixedThreadPool(10, threadFactory);
+        initializeFlat();
+        for (int i = 0; i < 200; i++) {
+            try (FDBRecordContext context = openContext()) {
+                openRecordStore(context);
+                String[] randomWords = generateRandomWords(500);
+                final TestRecordsTextProto.SimpleDocument dylan = TestRecordsTextProto.SimpleDocument.newBuilder()
+                        .setDocId(i)
+                        .setText(randomWords[1])
+                        .setGroup(2)
+                        .build();
+                recordStore.saveRecord(dylan);
+                commit(context);
+            }
+        }
+        try (FDBRecordContext context = openContext()) {
+            openRecordStore(context);
+            final QueryComponent filter1 = new LuceneQueryComponent("*:*", Lists.newArrayList("text"), false);
+            RecordQuery query = RecordQuery.newBuilder()
+                    .setRecordType(TextIndexTestUtils.SIMPLE_DOC)
+                    .setFilter(filter1)
+                    .build();
+            setDeferFetchAfterUnionAndIntersection(false);
+            RecordQueryPlan plan = planner.plan(query);
+            List<Long> primaryKeys = recordStore.executeQuery(plan).map(FDBQueriedRecord::getPrimaryKey).map(t -> t.getLong(0)).asList().get();
+            assertThat(threadFactory.threadCounts, aMapWithSize(greaterThan(0)));
+        }
+    }
+
+    static class CountingThreadFactory implements ThreadFactory {
+        final Map<String, Integer> threadCounts = new ConcurrentHashMap<>();
+        final ThreadFactory delegate = Executors.defaultThreadFactory();
+
+        @Override
+        public Thread newThread(Runnable r) {
+            return delegate.newThread(() -> {
+                threadCounts.merge(Thread.currentThread().getName(), 1, Integer::sum);
+                r.run();
+            });
+        }
+    }
 
     @ParameterizedTest
     @BooleanSource
-    public void nestedLuceneAndQuery(boolean shouldDeferFetch) throws Exception {
+    void nestedLuceneAndQuery(boolean shouldDeferFetch) throws Exception {
         initializeNested();
         try (FDBRecordContext context = openContext()) {
             openRecordStore(context);
             RecordQuery query = RecordQuery.newBuilder()
                     .setRecordType(MAP_DOC)
-                    .setFilter(new LuceneQueryComponent("a_value:king", Lists.newArrayList("key"), false))
+                    .setFilter(Query.and(
+                            new LuceneQueryComponent("entry_value:king", Lists.newArrayList("entry"), false),
+                            Query.field("entry").oneOfThem().matches(Query.field("key").equalsValue("a"))))
                     .build();
             setDeferFetchAfterUnionAndIntersection(shouldDeferFetch);
             RecordQueryPlan plan = planner.plan(query);
 
             List<Long> primaryKeys = recordStore.executeQuery(plan).map(FDBQueriedRecord::getPrimaryKey).map(t -> t.getLong(0)).asList().get();
             Matcher<RecordQueryPlan> matcher = indexScan(allOf(
-                    indexScanType(IndexScanType.BY_LUCENE),
+                    indexScanType(LuceneScanTypes.BY_LUCENE),
                     indexScan("Map$entry-value"),
-                    bounds(hasTupleString("[[a_value:king],[a_value:king]]"))
+                    scanParams(allOf(
+                            query(hasToString("entry_value:king")),
+                            group(hasTupleString("[[a],[a]]"))))
             ));
             assertThat(plan, matcher);
-            assertEquals(Arrays.asList(2L), primaryKeys);
+            assertEquals(Set.of(2L), Set.copyOf(primaryKeys));
         }
     }
 
     @ParameterizedTest
     @BooleanSource
-    public void nestedLuceneFieldQuery(boolean shouldDeferFetch) throws Exception {
+    void nestedLuceneFieldQuery(boolean shouldDeferFetch) throws Exception {
         initializeNested();
         try (FDBRecordContext context = openContext()) {
             openRecordStore(context);
             RecordQuery query = RecordQuery.newBuilder()
                     .setRecordType(MAP_DOC)
-                    .setFilter(new LuceneQueryComponent("a_value:king", Lists.newArrayList("key")))
+                    .setFilter(new LuceneQueryComponent("entry_value:king", Lists.newArrayList("entry")))
                     .build();
             setDeferFetchAfterUnionAndIntersection(shouldDeferFetch);
             RecordQueryPlan plan = planner.plan(query);
             Matcher<RecordQueryPlan> matcher = indexScan(allOf(
-                    indexScanType(IndexScanType.BY_LUCENE),
-                    indexScan("Map$entry-value"),
-                    bounds(hasTupleString("[[a_value:king],[a_value:king]]"))
+                    indexScanType(LuceneScanTypes.BY_LUCENE),
+                    indexScan("MapField$values"),
+                    scanParams(query(hasToString("entry_value:king")))
             ));
             assertThat(plan, matcher);
             List<Long> primaryKeys = recordStore.executeQuery(plan).map(FDBQueriedRecord::getPrimaryKey).map(t -> t.getLong(0)).asList().get();
-            assertEquals(Arrays.asList(2L), primaryKeys);
+            assertEquals(Set.of(0L, 2L), Set.copyOf(primaryKeys));
         }
     }
 
-    /*
     @ParameterizedTest
     @BooleanSource
-    public void nestedOneOfThemQuery(boolean shouldDeferFetch) throws Exception {
+    void nestedOneOfThemQuery(boolean shouldDeferFetch) throws Exception {
         initializeNested();
         try (FDBRecordContext context = openContext()) {
             openRecordStore(context);
 
             RecordQuery query = RecordQuery.newBuilder()
                     .setRecordType(MAP_DOC)
-                    .setFilter(new OneOfThemWithComponent("entry", Query.field("key").equalsValue("king")))
+                    .setFilter(Query.field("entry").oneOfThem().matches(Query.field("key").equalsValue("king")))
                     .build();
             setDeferFetchAfterUnionAndIntersection(shouldDeferFetch);
             RecordQueryPlan plan = planner.plan(query);
             Matcher<RecordQueryPlan> matcher = indexScan(allOf(
-                    indexScanType(IndexScanType.BY_LUCENE),
-                    indexScan("Map$entry-value"),
-                    bounds(hasTupleString("[[entry_key:\"king\"],[entry_key:\"king\"]]"))));
+                    indexScanType(LuceneScanTypes.BY_LUCENE),
+                    indexScan("MapField$values"),
+                    scanParams(query(hasToString("entry_key:STRING EQUALS king")))));
             if (shouldDeferFetch) {
                 matcher = fetch(primaryKeyDistinct(coveringIndexScan(matcher)));
             } else {
@@ -587,17 +772,18 @@ public class FDBLuceneQueryTest extends FDBRecordStoreQueryTestBase {
             }
             assertThat(plan, matcher);
             List<Long> primaryKeys = recordStore.executeQuery(plan).map(FDBQueriedRecord::getPrimaryKey).map(t -> t.getLong(0)).asList().get();
-            assertEquals(Collections.emptyList(), primaryKeys);
+            assertEquals(Set.of(), Set.copyOf(primaryKeys));
         }
     }
+
     @ParameterizedTest
     @BooleanSource
-    public void nestedOneOfThemWithAndQuery(boolean shouldDeferFetch) throws Exception {
+    void nestedOneOfThemWithAndQuery(boolean shouldDeferFetch) throws Exception {
         initializeNested();
         try (FDBRecordContext context = openContext()) {
             openRecordStore(context);
             final QueryComponent filter = Query.field("entry").oneOfThem().matches(Query.and(Query.field("key").equalsValue("b"),
-                    Query.field("value").text().containsPhrase("entry_b_value:(+civil blood makes civil hands unclean")));
+                    Query.field("value").text().containsPhrase("civil blood makes civil hands unclean")));
             RecordQuery query = RecordQuery.newBuilder()
                     .setRecordType(MAP_DOC)
                     .setFilter(filter)
@@ -605,9 +791,10 @@ public class FDBLuceneQueryTest extends FDBRecordStoreQueryTestBase {
             setDeferFetchAfterUnionAndIntersection(shouldDeferFetch);
             RecordQueryPlan plan = planner.plan(query);
             Matcher<RecordQueryPlan> matcher = indexScan(allOf(
-                    indexName(MAP_ON_LUCENE_INDEX.getName()),
-                    indexScanType(IndexScanType.BY_LUCENE),
-                    bounds(hasTupleString("[[entry_b_value:(+\"civil blood makes civil hands unclean\")],[entry_b_value:(+\"civil blood makes civil hands unclean\")]]"))
+                    indexName(MAP_AND_FIELD_ON_LUCENE_INDEX.getName()),
+                    indexScanType(LuceneScanTypes.BY_LUCENE),
+                    // TODO: This query does not have the proper correlation between the two children. An index that put the key into the name would be needed to tell that.
+                    scanParams(query(hasToString("entry_key:STRING EQUALS b AND entry_value:TEXT TEXT_CONTAINS_PHRASE civil blood makes civil hands unclean")))
                     ));
             if (shouldDeferFetch) {
                 matcher = fetch(primaryKeyDistinct(coveringIndexScan(matcher)));
@@ -616,14 +803,14 @@ public class FDBLuceneQueryTest extends FDBRecordStoreQueryTestBase {
             }
             assertThat(plan, matcher);
             List<Long> primaryKeys = recordStore.executeQuery(plan).map(FDBQueriedRecord::getPrimaryKey).map(t -> t.getLong(0)).asList().get();
-            assertEquals(Collections.emptyList(), primaryKeys);
+            //assertEquals(Set.of(), Set.copyOf(primaryKeys));
         }
 
     }
 
     @ParameterizedTest
     @BooleanSource
-    public void nestedOneOfThemWithOrQuery(boolean shouldDeferFetch) throws Exception {
+    void nestedOneOfThemWithOrQuery(boolean shouldDeferFetch) throws Exception {
         initializeNested();
         try (FDBRecordContext context = openContext()) {
             openRecordStore(context);
@@ -636,9 +823,9 @@ public class FDBLuceneQueryTest extends FDBRecordStoreQueryTestBase {
             setDeferFetchAfterUnionAndIntersection(shouldDeferFetch);
             RecordQueryPlan plan = planner.plan(query);
             Matcher<RecordQueryPlan> matcher = indexScan(allOf(
-                    indexName(MAP_ON_LUCENE_INDEX.getName()),
-                    indexScanType(IndexScanType.BY_LUCENE),
-                    bounds(hasTupleString("[[(entry.value:(+\"civil blood makes civil hands unclean\")) OR (entry.key:\"b\")],[(entry.value:(+\"civil blood makes civil hands unclean\")) OR (entry.key:\"b\")]]"))
+                    indexName(MAP_AND_FIELD_ON_LUCENE_INDEX.getName()),
+                    indexScanType(LuceneScanTypes.BY_LUCENE),
+                    scanParams(query(hasToString("entry_key:STRING EQUALS b OR entry_value:TEXT TEXT_CONTAINS_PHRASE civil blood makes civil hands unclean")))
             ));
             if (shouldDeferFetch) {
                 matcher = fetch(primaryKeyDistinct(coveringIndexScan(matcher)));
@@ -647,10 +834,32 @@ public class FDBLuceneQueryTest extends FDBRecordStoreQueryTestBase {
             }
             assertThat(plan, matcher);
             List<Long> primaryKeys = recordStore.executeQuery(plan).map(FDBQueriedRecord::getPrimaryKey).map(t -> t.getLong(0)).asList().get();
-            assertEquals(Arrays.asList(0L, 1L, 2L), primaryKeys);
+            assertEquals(Set.of(0L, 1L, 2L), Set.copyOf(primaryKeys));
         }
 
     }
-    */
+
+    @ParameterizedTest
+    @BooleanSource
+    public void longFieldQuery(boolean shouldDeferFetch) throws Exception {
+        initializeNested();
+        try (FDBRecordContext context = openContext()) {
+            openRecordStore(context);
+            RecordQuery query = RecordQuery.newBuilder()
+                    .setRecordType(MAP_DOC)
+                    .setFilter(Query.field("doc_id").greaterThan(1L))
+                    .build();
+            setDeferFetchAfterUnionAndIntersection(shouldDeferFetch);
+            RecordQueryPlan plan = planner.plan(query);
+            Matcher<RecordQueryPlan> matcher = indexScan(allOf(
+                    indexScanType(LuceneScanTypes.BY_LUCENE),
+                    indexName(MAP_AND_FIELD_ON_LUCENE_INDEX.getName()),
+                    scanParams(query(hasToString("doc_id:LONG GREATER_THAN 1")))
+            ));
+            assertThat(plan, matcher);
+            List<Long> primaryKeys = recordStore.executeQuery(plan).map(FDBQueriedRecord::getPrimaryKey).map(t -> t.getLong(0)).asList().get();
+            assertEquals(Set.of(2L), Set.copyOf(primaryKeys));
+        }
+    }
 
 }
